--- a/gallery/photos/static/css/style.css
+++ b/gallery/photos/static/css/style.css
@@ -21,7 +21,7 @@
 	text-rendering:optimizeLegibility;
 }
 body {
-	background:#e16461;
+	background:#e7e7e7;
 }
 ul {
 	list-style:none;
@@ -55,10 +55,11 @@ img {
 .superbox-show {
 	text-align:center;
 	position:relative;
-	background:#333;
-	box-shadow:inset 0 1px 5px #111;
-	-webkit-box-shadow:inset 0 1px 5px #111;
-	-moz-box-shadow:inset 0 1px 5px #111;
+	/*background:#333;*/
+	background:#f8f8f8;
+	/*box-shadow:inset 0 1px 5px #111;*/
+	/*-webkit-box-shadow:inset 0 1px 5px #111;*/
+	/*-moz-box-shadow:inset 0 1px 5px #111;*/
 	width:100%;
     float:left;
 	padding:25px;
@@ -66,8 +67,8 @@ img {
 }
 .superbox-current-img {
 	max-width:100%;
-	box-shadow:0 1px 4px #222;
-	border:1px solid #222;
+	/*box-shadow:0 1px 4px #222;*/
+	/*border:1px solid #222;*/
 }
 .superbox-img:hover {
 	opacity:0.8;
@@ -84,6 +85,7 @@ img {
 	background:url(../img/close.gif) no-repeat center center;
 	width:35px;
 	height:35px;
+	background-color: #222222;
 }
 .superbox-close:hover {
 	opacity:1;
